--- a/FE/wedding101/src/components/common/Header.css
+++ b/FE/wedding101/src/components/common/Header.css
@@ -1,7 +1,7 @@
 .header {
   background-color: #ffffff;
   width: 100%;
-  height: 10%;
+  height: 8vh;
   position: fixed;
   /* display: none; */
 }
