front : [111] 청첩장 생성 ing
Former-commit-id: e565328f05198df328ce2f684055eb065a6dace5

--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess02.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess02.css
@@ -7,6 +7,16 @@
 }
 .invitation-item{
     margin: 1px;
+    display: flex;
+}
+.upload-input {
+    padding-top: 50%;
+}
+.upload01 {
+    display: flex;
+}
+.upload02 {
+    display: flex;
 }
 .buttons {
     display: inline;
