front : [113] process 개요완료
Former-commit-id: b5e984882bfbe0bf3c82a93a2ba3234d561a8e16

--- a/FE/wedding101/src/pages/Album/AlbumCover.css
+++ b/FE/wedding101/src/pages/Album/AlbumCover.css
@@ -12,6 +12,17 @@
     width: 500px;
     height: 600px;
 }
+.album-img {
+    margin: auto;
+    position: absolute;
+    top: 30%;
+}
+.cover-id {
+    margin: auto;
+    position: absolute;
+    top: 60%;
+}
+
 .upload-media {
     display: flex;
     justify-content: center;
