--- a/FE/wedding101/src/pages/Main/MainArea01.css
+++ b/FE/wedding101/src/pages/Main/MainArea01.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bakbak+One&family=Nanum+Brush+Script&display=swap');
+
 .main-area01 {
   display: flex;
   margin-top: 8vh;
@@ -15,14 +17,16 @@
   align-items: center;
 }
 .emptyBox{
-  width:200px;
-  height:200px;
+  height:100%;
 }
 .title_explain{
  display: flex;
+ justify-content: start;
  flex-direction: column;
+ height:50%;
 }
 .title{
+  font-family: 'Bakbak One';
   font-size:72px;
 }
 .explainText{
@@ -46,21 +50,36 @@
   position: fixed;
   bottom: 0;
 }
-.image_main01{
-  height:100%;
+img {
+  height: 100%;
+  overflow: hidden;
 }
 #title_p1_01{
   height:100px;
 }
 #explain_p1_01{
+  font-family: "Nanum Brush Script";
+  color: white;
+  text-shadow: 2px 2px 4px gray;
   height:305px;
 }
 #VL_p1_01{
+  width: auto;
   height:100%;
 }
 #VL_p1_02{
+  position: relative;
+  left: 1%;
+  height:100%;
+}
+#HL_p1_01{
+  height:50%;
 }
 #HL_p1_02{
+  width:100%;
+  height:50%;
+  justify-content: flex-end;
 }
 #HL_p1_03{
+  height:50%;
 }
