--- a/FE/wedding101/src/pages/Main/MainArea02.css
+++ b/FE/wedding101/src/pages/Main/MainArea02.css
@@ -40,6 +40,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.slick-slider {
+  height: 80%;
+  width: 70%;
+}
+
 #container_02{
   height:750px;
 }
