front : [118] album ing
Former-commit-id: 65958c274fdbbcf2e9e5ff1b912d2ca9362d49cc

--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess02.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess02.css
@@ -5,6 +5,9 @@
 .process-main {
     padding-top: 10%;
 }
+.inner-content {
+    display: flex;
+}
 .invitation-item{
     margin: 1px;
     display: flex;
