--- a/FE/wedding101/src/components/common/Footer.css
+++ b/FE/wedding101/src/components/common/Footer.css
@@ -2,5 +2,6 @@
   background-color: #ffffff;
   width: 100%;
   height: 10%;
-  position: absolute;
+  position: relative;
+  transform: translatY(-100%);
 }
