--- a/FE/wedding101/src/pages/Main/MainArea03.css
+++ b/FE/wedding101/src/pages/Main/MainArea03.css
@@ -7,14 +7,32 @@
   justify-content: center;
   align-items: center;
 }
-#container_p3 {
-  height:750px;
+
+#title03{
+  height: 40%;
+}
+#DL03{
+  align-items: start;
+  height: 60%;
+}
+
+#button03{
+  background-color: #A3BDED;
+  height: 20%;
 }
 #HL_p3_01 {
   width: 100%;
   height: 100%;
+  justify-content: space-between;
 }
 #VL_p3_01 {
   height: 100%;
   justify-content: space-between;
+}
+#img_main3_1{
+  height: 100%;
+}
+#img_main3_2{
+  height:60%;
+  object-fit: scale-down;
 }
