--- a/FE/wedding101/src/pages/Main/MainArea01.css
+++ b/FE/wedding101/src/pages/Main/MainArea01.css
@@ -21,7 +21,7 @@
 }
 .title_explain{
  display: flex;
- justify-content: start;
+ justify-content: flex-start;
  flex-direction: column;
  height:50%;
 }
