front : 마이페이지 수정중
Former-commit-id: a8fe38eb0cf36ee2f13f6aaef11ee6e4524eafec

--- a/FE/wedding101/src/pages/User/UserMyPage/UserMyPage.css
+++ b/FE/wedding101/src/pages/User/UserMyPage/UserMyPage.css
@@ -5,12 +5,15 @@
     }
 
 .user-mypage-items {
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 .user-mypage-item {
     background-color: #ffffff;
-    width: 500px;
-    height: 400px;
+    width: 250px;
+    height: 80px;
     margin: 2%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
