FE: 메인 4번째 화면 완료
Former-commit-id: 69d9cea4fb178f08f82f5d8d596ba77f832e7cfd

--- a/FE/wedding101/src/pages/Main/MainArea04.css
+++ b/FE/wedding101/src/pages/Main/MainArea04.css
@@ -1,9 +1,22 @@
 .main-area04 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 92vh;
   padding-bottom: 8vh;
   background-color: #d9cfde;
 }
 
-#main04{
-  
+.content-wrapper {
+  height:75%;
+}
+
+#VL_p4_01 {
+  height: 100%;
+  width: 100%;
+}
+
+ul {
+  position: relative;
+  left: 20%;
 }
