FE: [107] 플로팅버튼, 메인화면 완료
Former-commit-id: 487ae1589eee8a7dad5ceed4770e68f7bd5f6884

--- a/FE/wedding101/src/pages/Main/MainIndex.css
+++ b/FE/wedding101/src/pages/Main/MainIndex.css
@@ -10,9 +10,10 @@
 }
 
 .goServiceButton {
-  left: 50%;
   position: fixed;
-  padding-bottom: 10%;
+  left: 50%;
+  top: 85%;
+  transform: translate(-50%, -50%);
 }
 
 #invitation{
