FE: [109] 서비스 프로세스 2 진행중
Former-commit-id: 4568aec7e522be97ab483eb3e7a1ed7bc0041480

--- a/FE/wedding101/src/components/serviceProcess/WeddingInfoForm.css
+++ b/FE/wedding101/src/components/serviceProcess/WeddingInfoForm.css
@@ -1,3 +1,19 @@
 .wedding-info-form {
     background-color: #ffffff;
+    width: 40%;
+}
+
+.verticalLayout#infoForm {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.verticalLayout#infoForm > .horizontalLayout {
+    width: 80%;
+    justify-content: space-between;
+}
+
+.textInputField {
+    width: 70%;
 }
