--- a/FE/wedding101/src/pages/ServiceProcess/ServiceProcess02.css
+++ b/FE/wedding101/src/pages/ServiceProcess/ServiceProcess02.css
@@ -2,5 +2,10 @@
     background-color: #fff4f3;
     height: 100vh;
     padding-top: 10%;
-  }
-  
+}
+
+.infoContainer {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
