FE: [109] 화면3 완성, 지도 띄우기 성공
Former-commit-id: ccce604a87c284fb5ae47a55722b3e92265e10d6

--- a/FE/wedding101/src/pages/ServiceProcess/ServiceProcess02.css
+++ b/FE/wedding101/src/pages/ServiceProcess/ServiceProcess02.css
@@ -1,7 +1,8 @@
 .service-process02 {
     background-color: #fff4f3;
-    height: 100vh;
-    padding-top: 10%;
+    padding-top: 12vh;
+    padding-bottom: 12vh;
+    height: 88vh;
 }
 
 .infoContainer {
