--- a/FE/wedding101/src/pages/ServiceProcess/ServiceProcess03.css
+++ b/FE/wedding101/src/pages/ServiceProcess/ServiceProcess03.css
@@ -1,6 +1,39 @@
 .service-process03 {
     background-color: #fff4f3;
-    height: 100vh;
-    padding-top: 10%;
-  }
-  
+    padding-top: 12vh;
+    padding-bottom: 12vh;
+    height: 94vh;
+}
+
+.wedLocDayContainer{
+  width: 100%;
+  height: 80%;
+}
+
+.horizontalLayout .spaceBetween{
+  justify-content: space-between;
+}
+
+.textInputField{
+  background-color: white;
+}
+
+#mapContainer{
+  width: 60%;
+  height: 75vh;
+  border: 1px solid black;
+  border-radius: 3%;
+}
+
+#process03_inputArea {
+  width: 35%;
+  height: 100%;
+  justify-content: flex-start;
+}
+
+#HL_process03 {
+  width: 90%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: start;
+}
