--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
@@ -7,12 +7,6 @@ tablebox {
     justify-items: center;
 }
 
-.pagination {
-    justify-items: center;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
 .navbar {
     display: inline;
     height: 100vh;
@@ -33,3 +27,24 @@ h1{
     border: 2px solid #000;
     box-shadow: 24;
 };
+
+.register_btn{
+    height: 90%;
+    font-size: large;
+    margin-top: 10%;
+    justify-content: center;
+}
+
+.blank{
+    height: 1%;
+}
+
+.button-style{
+    float: right;
+    margin-top: 1%;
+}
+    
+.pagination {
+    justify-items: center;
+    margin-top: 5%;
+}
