--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestionModal.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestionModal.css
@@ -13,8 +13,10 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 80%;
   width: 80%;
+  justify-content: center;
   overflow: auto;
   padding: 1rem;
   font-size: x-large;
