FE: [109] 서비스 신청 완료
Former-commit-id: ce5b2fb276ecbbbffa7707d3aa473e0464625a2e

--- a/FE/wedding101/src/pages/ServiceProcess/ServiceProcess02.css
+++ b/FE/wedding101/src/pages/ServiceProcess/ServiceProcess02.css
@@ -1,8 +1,9 @@
 .service-process02 {
     background-color: #fff4f3;
     padding-top: 12vh;
-    padding-bottom: 12vh;
     height: 88vh;
+    padding-bottom: 12vh;
+    overflow: scroll;
 }
 
 .infoContainer {
