front : [119] 앨범삭제연결
Former-commit-id: 564a18b97260c7bf62cb6f36d869e33d8293d79f

--- a/FE/wedding101/src/pages/Album/AlbumList.css
+++ b/FE/wedding101/src/pages/Album/AlbumList.css
@@ -15,7 +15,9 @@
     justify-content: center;
     align-items: center;
 }
-
+.filter-icons {
+    display: flex;
+}
 .bin-icon {
     justify-content: end;
 }
