FE : 문의페이지 - 등록 버튼 모달 수정
Former-commit-id: cf6cc85d2ce6b2c11e44a0456b54b229a939b342

--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestionModal.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestionModal.css
@@ -26,9 +26,9 @@
 
 /* Modal header */
 #Modal__header {
-  align-items: center;
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid rgba(170, 170, 170, 0.5);
