FE : InvitationProcess 메시지 입력 창
Former-commit-id: 97bfec5070e8f1db41bda1f1e56df65312ef0477

--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess03.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess03.css
@@ -10,7 +10,8 @@
     display: flex;
 }
 .text-form {
-    display: inline;
+    display: flex;
+    flex-direction: row;
 }
 .invitation-form{
     display: flex;
