--- a/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
@@ -8,16 +8,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap');
 
-* {
+/* * {
     font-family: 'Gowun Batang', serif;
-}
+} */
 
-body {
+/* body {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
-}
+} */
 
 .invitation {
+    font-family: 'Gowun Batang', serif;
     border: 1px solid #999;
 }
 
@@ -40,7 +41,7 @@ body {
 }
 
 .weddingPhoto img{
-    width: 80vw;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
